---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# mysql:skip\n# clickhouse:skip\nfrom tracks\nfilter genre_id == 100\nderive empty_name = name == ''\naggregate {sum track_id, concat_array name, all empty_name, any empty_name}\n"
input_file: prqlc/prqlc/tests/integration/queries/aggregation.prql
---
frames:
- - 1:43-65
  - columns:
    - !All
      input_id: 13
      except: []
    inputs:
    - id: 13
      name: tracks
      table:
      - default_db
      - tracks
- - 1:66-96
  - columns:
    - !All
      input_id: 13
      except: []
    - !Single
      name:
      - empty_name
      target_id: 19
      target_name: null
    inputs:
    - id: 13
      name: tracks
      table:
      - default_db
      - tracks
- - 1:97-172
  - columns:
    - !Single
      name: null
      target_id: 25
      target_name: null
    - !Single
      name: null
      target_id: 28
      target_name: null
    - !Single
      name: null
      target_id: 31
      target_name: null
    - !Single
      name: null
      target_id: 34
      target_name: null
    inputs:
    - id: 13
      name: tracks
      table:
      - default_db
      - tracks
nodes:
- id: 13
  kind: Ident
  span: 1:31-42
  ident: !Ident
  - default_db
  - tracks
  parent: 18
- id: 14
  kind: RqOperator
  span: 1:50-65
  targets:
  - 16
  - 17
  parent: 18
- id: 16
  kind: Ident
  span: 1:50-58
  ident: !Ident
  - this
  - tracks
  - genre_id
  targets:
  - 13
- id: 17
  kind: Literal
  span: 1:62-65
- id: 18
  kind: 'TransformCall: Filter'
  span: 1:43-65
  children:
  - 13
  - 14
  parent: 24
- id: 19
  kind: RqOperator
  span: 1:86-96
  alias: empty_name
  targets:
  - 21
  - 22
  parent: 23
- id: 21
  kind: Ident
  span: 1:86-90
  ident: !Ident
  - this
  - tracks
  - name
  targets:
  - 13
- id: 22
  kind: Literal
  span: 1:94-96
- id: 23
  kind: Tuple
  span: 1:86-96
  children:
  - 19
  parent: 24
- id: 24
  kind: 'TransformCall: Derive'
  span: 1:66-96
  children:
  - 18
  - 23
  parent: 38
- id: 25
  kind: RqOperator
  span: 1:108-120
  targets:
  - 27
  parent: 37
- id: 27
  kind: Ident
  span: 1:112-120
  ident: !Ident
  - this
  - tracks
  - track_id
  targets:
  - 13
- id: 28
  kind: RqOperator
  span: 1:122-139
  targets:
  - 30
  parent: 37
- id: 30
  kind: Ident
  span: 1:135-139
  ident: !Ident
  - this
  - tracks
  - name
  targets:
  - 13
- id: 31
  kind: RqOperator
  span: 1:141-155
  targets:
  - 33
  parent: 37
- id: 33
  kind: Ident
  span: 1:145-155
  ident: !Ident
  - this
  - empty_name
  targets:
  - 19
- id: 34
  kind: RqOperator
  span: 1:157-171
  targets:
  - 36
  parent: 37
- id: 36
  kind: Ident
  span: 1:161-171
  ident: !Ident
  - this
  - empty_name
  targets:
  - 19
- id: 37
  kind: Tuple
  span: 1:107-172
  children:
  - 25
  - 28
  - 31
  - 34
  parent: 38
- id: 38
  kind: 'TransformCall: Aggregate'
  span: 1:97-172
  children:
  - 24
  - 37
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:31-35
              args:
              - Ident:
                - tracks
                span: 1:36-42
            span: 1:31-42
          - FuncCall:
              name:
                Ident:
                - filter
                span: 1:43-49
              args:
              - Binary:
                  left:
                    Ident:
                    - genre_id
                    span: 1:50-58
                  op: Eq
                  right:
                    Literal:
                      Integer: 100
                    span: 1:62-65
                span: 1:50-65
            span: 1:43-65
          - FuncCall:
              name:
                Ident:
                - derive
                span: 1:66-72
              args:
              - Binary:
                  left:
                    Ident:
                    - name
                    span: 1:86-90
                  op: Eq
                  right:
                    Literal:
                      String: ''
                    span: 1:94-96
                span: 1:86-96
                alias: empty_name
            span: 1:66-96
          - FuncCall:
              name:
                Ident:
                - aggregate
                span: 1:97-106
              args:
              - Tuple:
                - FuncCall:
                    name:
                      Ident:
                      - sum
                      span: 1:108-111
                    args:
                    - Ident:
                      - track_id
                      span: 1:112-120
                  span: 1:108-120
                - FuncCall:
                    name:
                      Ident:
                      - concat_array
                      span: 1:122-134
                    args:
                    - Ident:
                      - name
                      span: 1:135-139
                  span: 1:122-139
                - FuncCall:
                    name:
                      Ident:
                      - all
                      span: 1:141-144
                    args:
                    - Ident:
                      - empty_name
                      span: 1:145-155
                  span: 1:141-155
                - FuncCall:
                    name:
                      Ident:
                      - any
                      span: 1:157-160
                    args:
                    - Ident:
                      - empty_name
                      span: 1:161-171
                  span: 1:157-171
                span: 1:107-172
            span: 1:97-172
        span: 1:31-172
    span: 1:0-172
